removed height of category title to prevent nominee overlap

--- a/src/styles/awards-styles.css
+++ b/src/styles/awards-styles.css
@@ -98,7 +98,7 @@ body {
 
  .category-title {
   font-size: 3em;
-  height: 20%;
+  /* height: 20%; */
   padding: 0px 0.2em; /* NOTE: this padding is to make the title align with album cover */
 }
 
